# yamldoc

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CNAME  index.html
docs_src/: Makefile  index.yaml  template.html
docs_src/templates/: page.html
src/yamldoc/: __init__.py
